# git-conceal

./: .gitattributes  .gitattributes.example  CROSS_COMPILE.md  Cargo.toml  Makefile  README.md  SECURITY.md  install.sh  more-secrets.txt  some-secrets.txt
.buildkite/: build_and_upload_artifact.sh  create_github_release.sh  install_build_tools.sh  install_rust.sh  lint.sh  lint_and_test.sh  pipeline.yml  test.sh  test_decrypt.sh
src/: crypto.rs  filter.rs  fs_helpers.rs  git.rs  key.rs  main.rs  repo.rs  status.rs
src/commands/: filter.rs  init.rs  key.rs  lock.rs  mod.rs  status.rs  unlock.rs
tests/: integration_test.rs
