[package]
name = "git-conceal"
version = "0.1.0"
authors = ["Automattic <mobile@automattic.com>"]
description = "Transparent file encryption in git using symmetric keys"
license = "MPL-2.0"
rust-version = "1.70"
edition = "2021"

[[bin]]
name = "git-conceal"
path = "src/main.rs"

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
aes = "^0.8"
ctr = "^0.9"
sha2 = "^0.10"
hmac = "^0.12"
hkdf = "^0.12"
rand = "^0.9"
base64 = "^0.22"
git2 = { version = "^0.20", features = ["vendored-openssl", "vendored-libgit2"] }
hex = "^0.4"
anyhow = "^1.0"
thiserror = "^2.0"
dirs = "^6.0"
walkdir = "^2"
indoc = "^2.0"
const_format = "^0.2"

[target.'cfg(unix)'.dependencies]
libc = "^0.2"

[target.'cfg(windows)'.dependencies]
windows-permissions = "0.2.4"

[dev-dependencies]
tempfile = "^3"
serial_test = "^3"
